--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -28,6 +28,9 @@ $gray: #949494;
 @import "./partials/nav";
 @import "./partials/header";
 @import "./partials/mainAbout";
+@import "./partials/projects.scss";
+@import "./partials/contact";
+@import "./partials/footer";
 @import "./partials/animations";
 
 
