--- a/styles/sass/partials/_contact.scss
+++ b/styles/sass/partials/_contact.scss
@@ -75,6 +75,7 @@
             }
 
             button {
+               color: black;
                font-family: $font;
                cursor: pointer;
                width: 100%;
@@ -82,6 +83,12 @@
                border: none;
                border-radius: 5px;
                padding: 0.3rem 0.5rem;
+               transition: all 0.2s ease-in-out 0s;
+            }
+
+            button:hover,
+            button:focus {
+               background: $green;
             }
          }
       }
