--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -7,7 +7,7 @@ footer {
    padding-bottom: 2rem;
 
    div {
-      width: 7rem;
+      width: 8rem;
       text-align: center;
    }
 
@@ -32,6 +32,15 @@ footer {
 // Media Queries
 @media (max-width: 520px) {
    footer {
-      font-size: 1.3rem;
+      font-size: 1.1rem;
+
+      div {
+         width: 6.5rem;
+      }
+
+      a:hover,
+      a:focus {
+         font-size: 1.3rem;
+      }
    }
 }
