added scroll animation on project.html using js

--- a/styles/sass/partials/projects.scss
+++ b/styles/sass/partials/projects.scss
@@ -2,7 +2,7 @@
 .mainAbout {
    .projects {
       justify-content: space-between;
-      margin-bottom: 4rem;
+      margin-bottom: 6rem;
       margin-left: 1.5rem;
    }
 
@@ -73,6 +73,24 @@
       img {
          width: 100%;
       }
+   }
+
+// Animate on Scroll
+   .scroll {
+      opacity: 0;
+      transition: opacity 0.7s;
+   }
+
+   .scroll.scrolled {
+      opacity: 1;
+   }
+
+   .scrolled.fadeIn {
+      animation: fadeIn 1s ease-in-out both;
+   }
+
+   .scrolled.slideLeft {
+      animation: slideLeft 1s ease-in-out both;
    }
 }
 
