--- a/styles/sass/partials/_animations.scss
+++ b/styles/sass/partials/_animations.scss
@@ -199,8 +199,6 @@
    }
 }
 
-
-
 @keyframes bounce {
    0% {
       transform: translateY(0);
@@ -210,5 +208,25 @@
    }
    100% {
       transform: translateY(0);
+   }
+}
+
+@keyframes slideLeft {
+   0% {
+      opacity: 0;
+      transform: translateX(-100px);
+   }
+   100% {
+      opacity: 1;
+      transform: translateX(0);
+   }
+}
+
+@keyframes fadeIn {
+   0% {
+      opacity: 0;
+   }
+   100% {
+      opacity: 1;
    }
 }
