added 6th project on Project page

--- a/styles/sass/partials/projects.scss
+++ b/styles/sass/partials/projects.scss
@@ -41,6 +41,10 @@
          @include before("5");
       }
 
+      .six::before {
+         @include before("6");
+      }
+
       .paraDiv {
          p {
             line-height: 1.3rem;
